<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:background="@drawable/recipe_summary_bg"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginBottom="5dp"
            android:gravity="center"
            android:text="@{recipe.title}"
            android:textColor="#5F775F"
            android:textSize="20sp"
            android:textStyle="bold"
            tools:text="Recipe title placeholder" />

        <ImageView
            android:id="@+id/recipe_image"
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:layout_marginBottom="5dp"
            android:contentDescription="@string/recipe_picture"
            android:scaleType="centerCrop"
            tools:src="@drawable/ic_logo_scrappie" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.5"
                android:orientation="vertical"
                android:layout_marginHorizontal="5dp">

                <View style="@style/HorizontalDivider" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="30dp"
                        android:layout_marginHorizontal="5dp"
                        android:contentDescription="@string/time_for_the_recipe_to_be_ready"
                        android:scaleType="fitCenter"
                        android:src="@drawable/ic_baseline_access_time_24" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="30dp"
                        android:layout_marginHorizontal="5dp"
                        android:gravity="center_vertical"
                        android:text="@{String.format(`%s minutes`, recipe.readyInMinutes)}"
                        android:textColor="#5F775F"
                        android:textStyle="italic"
                        tools:text="100 minutes" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="30dp"
                        android:layout_marginHorizontal="5dp"
                        android:contentDescription="@string/number_of_servings"
                        android:scaleType="fitCenter"
                        android:src="@drawable/ic_baseline_room_service_24" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="30dp"
                        android:layout_marginHorizontal="5dp"
                        android:gravity="center_vertical"
                        android:text="@{String.format(`%s servings`, recipe.servings)}"
                        android:textColor="#5F775F"
                        android:textStyle="italic"
                        tools:text="100 servings" />

                </LinearLayout>

                <View style="@style/HorizontalDivider" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="30dp"
                    android:gravity="center"
                    android:text="@string/ingredients"
                    android:textColor="#5F775F"
                    android:textSize="15sp"
                    android:textStyle="bold" />

                <View style="@style/HorizontalDivider" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/rv_ingredients"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    tools:listitem="@layout/view_text_list_item"/>


            </LinearLayout>

            <View style="@style/VerticalDivider"/>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.5"
                android:orientation="vertical"
                android:layout_marginHorizontal="5dp">

                <View style="@style/HorizontalDivider" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="30dp"
                    android:gravity="center"
                    android:text="@string/instructions"
                    android:textColor="#5F775F"
                    android:textSize="15sp"
                    android:textStyle="bold" />

                <View style="@style/HorizontalDivider" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/rv_instructions"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    tools:listitem="@layout/view_numbered_list_item"/>

            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

    <data>

        <variable
            name="recipe"
            type="com.pinechain.model.dto.RecipeDTO" />
    </data>

</layout>
