<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardCornerRadius="10dp"
        app:cardElevation="10dp"
        android:layout_margin="10dp">

        <LinearLayout
            android:id="@+id/recipe_summary"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/recipe_summary_bg"
            android:orientation="vertical">

            <TextView
                android:id="@+id/recipe_name"
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:layout_marginBottom="5dp"
                android:gravity="center"
                android:maxLines="1"
                android:text="@{recipe.title}"
                android:textColor="#5F775F"
                android:textSize="20sp"
                android:textStyle="bold"
                tools:text="Recipe title placeholder" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="170dp"
                android:layout_marginBottom="10dp"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/recipe_image"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_marginHorizontal="5dp"
                    android:layout_weight="0.5"
                    android:contentDescription="@string/recipe_picture"
                    android:scaleType="centerCrop"
                    tools:src="@drawable/ic_logo_scrappie"/>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_marginHorizontal="5dp"
                    android:layout_weight="0.1"
                    android:orientation="vertical">

                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="30dp"
                        android:contentDescription="@string/time_for_the_recipe_to_be_ready"
                        android:scaleType="fitCenter"
                        android:src="@drawable/ic_baseline_access_time_24" />

                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="30dp"
                        android:contentDescription="@string/number_of_servings"
                        android:scaleType="fitCenter"
                        android:src="@drawable/ic_baseline_room_service_24" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_marginHorizontal="5dp"
                    android:layout_weight="0.4"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="30dp"
                        android:gravity="center_vertical"
                        android:text="@{String.format(`%s minutes`, recipe.readyInMinutes)}"
                        android:textColor="#5F775F"
                        android:textStyle="italic"
                        tools:text="100 minutes" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="30dp"
                        android:gravity="center_vertical"
                        android:text="@{String.format(`%s servings`, recipe.servings)}"
                        android:textColor="#5F775F"
                        android:textStyle="italic"
                        tools:text="100 servings" />

                </LinearLayout>

            </LinearLayout>

        </LinearLayout>
    </androidx.cardview.widget.CardView>


    <data>

        <variable
            name="recipe"
            type="com.pinechain.model.dto.RecipeDTO" />
    </data>

</layout>